[tool.poetry]
name = "package_name_rename_this_to_the_name_of_your_project"
version = "0.0.1"
description = "Your project description"
authors = [
    "Team member 1 <team_member1@central.ntua.gr>"
]
license = "Apache 2.0"
readme = "README.md"
homepage = ""
repository = "https://github.com/COMPLETE_THIS"


[tool.poetry.dependencies]
python = "^3.8"
torch = "1.8.0"
numpy = "1.19.5"
pytorch-nlp = "0.4.1"
transformers = "4.3.0"
requests = "^2.25.1"
scikit-learn = "^0.24.1"
scipy = "^1.6.1"
spacy = "3.0.3"
tqdm = "^4.57.0"
torchvision = "0.9.0"
nltk = "3.5"
loguru = "^0.5.3"
pytorch-lightning = "1.2.0"
wandb = "0.10.22"
omegaconf = "2.0.6"
gym = "0.18.0"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython = "^7.20.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
